--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   ],
   "author": "",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack",
+    "build:prod": "webpack --mode=production",
+    "dev": "webpack --watch"
+  },
   "devDependencies": {
-    "webpack": "^5.98.0"
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
