--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "browser",
     "extract"
   ],
-  "author": "",
+  "author": "ading2210",
+  "homepage": "https://github.com/ading2210/untar-sync",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ading2210/untar-sync"
+  },
   "license": "MIT",
+  "browser": "src/untar.js",
   "scripts": {
     "build": "webpack",
     "build:prod": "webpack --mode=production",
@@ -19,5 +25,8 @@
   "devDependencies": {
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "terser-webpack-plugin": "^5.3.12"
   }
 }
